project(server)
aux_source_directory(source DIR_SRCS)
aux_source_directory(source/net NET_DIR_SRCS)
aux_source_directory(source/threadpool THREADPOOL_DIR_SRCS)
include_directories( ${PROJECT_SOURCE_DIR}/include)
include_directories( ${PROJECT_SOURCE_DIR}/include/net)
include_directories( ${PROJECT_SOURCE_DIR}/include/threadpool)
include_directories( ${PROJECT_SOURCE_DIR}/../common/include)
# message( ${PROJECT_SOURCE_DIR}/../common/include)
include_directories( ${PROJECT_SOURCE_DIR}/../3rd)
include_directories( ${PROJECT_SOURCE_DIR}/../3rd/cppjieba)
include_directories( ${PROJECT_SOURCE_DIR}/../3rd/jsoncpp/json)
include_directories( ${PROJECT_SOURCE_DIR}/../3rd/tinyxml2/tinyxml2)
# include_directories(include ${PROJECT_BINARY_DIR}/3rd ${PROJECT_BINARY_DIR}/common/include  ${PROJECT_BINARY_DIR}/3rd/tinyxml2 )
# message(${PROJECT_BINARY_DIR}/common/include)
add_executable(server ${DIR_SRCS} ${NET_DIR_SRCS} ${THREADPOOL_DIR_SRCS})
# message(${PROJECT_BINARY_DIR}/../common/libcommon.so)
target_link_libraries(server  ${PROJECT_BINARY_DIR}/../common/libcommon.so ${PROJECT_BINARY_DIR}/../3rd/libjsoncpp.so)